<resources>
    <string name="app_name">Vocabulário</string>

    <string name="dialog_language_choice">As linguas tem que ser diffirentes</string>
    <string name="dialog_wordcheck_intro">Tenta relembrar as palavras e toca no ecrã. Se relembraste correctamente, desliza para a direita. Se não - para a esquerda. Ou usa os botões.</string>

    <string-array name="languages">
        <item>Portugués</item>
        <item>Russo</item>
    </string-array>

    <string-array name="translations">
        <item>Portugués</item>
        <item>Russo</item>
    </string-array>


    <string name="progress">"%.2f%%"</string>
    <string name="revision">Revisão</string>

    <string name="title_activity_congrats">Parabens</string>

    <string name="ok">OK</string>
    <string name="revise">REVER</string>
    <string name="reset">REAJUSTAR</string>
    <string name="reset_progress">REAJUSTAR PROGRESSO</string>
    <string name="new_topic">OUTRA TEMA</string>
    <string name="cancel">CANCELAR</string>
    <string name="next">SEGUINTE</string>
    <string name="skip">IGNORAR</string>
    <string name="start">CONCLUIR</string>

    <string name="congrats_title">Parabens!</string>
    <string name="congrats_msg">Tu aprendeste todas as palavras neste tema. Queres escolher um outro tema ou continuar rever o atual?</string>

    <string name="reset_title">Reajustar tudo?</string>
    <string name="reset_msg">"Todo o teu progresso vai ser zerado!"</string>

    <string name="reset_topic_title">Reajustar o tema?</string>
    <string name="reset_topic_msg">"O teu progresso neste tema vai ser zerado."</string>

    <string name="title_activity_welcome">Intro</string>

    <string name="slide_1_title">Bem vindo!</string>
    <string name="slide_1_desc">Esta app vai ajudar-te a aprender novas palavras ainda quando estás em movimento.</string>

    <string name="slide_2_title">Memoriza</string>
    <string name="slide_2_desc">Aprende as novas palavras</string>

    <string name="slide_3_title">Toca</string>
    <string name="slide_3_desc">Tenta relembrar as palavras. Toca no ecrâ para ver o tradução</string>

    <string name="slide_4_title">Desliza</string>
    <string name="slide_4_desc">Se relembraste correctamente, desliza para a direita. Se não - para a esquerda. Ou usa os botões. O teu progresso vai crescer depois de relembrares a mesma palavra correctamente 5 vezes.</string>

    <string name="slide_5_title">Feedback</string>
    <string name="slide_5_desc">Se encontraste erros ou tens sugestões, não hesites em deixar um feedback!</string>

    <string name="slide_6_title">Boa sorte!</string>
    <string name="slide_6_desc">A prática leva à perfeição, ou seja, nunca para aprender!</string>

    <!-- activity main -->
    <string name="word">Palavra</string>
    <string name="translation">Перевод</string>
    <string name="entendi">ENTENDI</string>
    <string name="progresso">Progresso</string>

    <!-- check answer -->

    <string name="correct">CORRECTO</string>
    <string name="repeat">REPETIR</string>
    <string name="answer">PALAVRA</string>

    <!-- congrats -->
    <string name="learned_all">Tu aprendeste todas as palavras</string>
    <string name="restart">RECOMEÇAR</string>

    <!-- congrats topic -->
    <string name="learned_all_topic">Tu aprendeste todas as palavras nesta tema</string>

    <!-- feedback -->
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="feedback">Feedback</string>
    <string name="send">ENVIAR</string>

    <!-- feedback -->
    <string name="direction">Escolha a direção</string>
    <string name="vocablury">VOCABULÁRIO</string>
    <string name="apply">APLICAR</string>

    <string name="reset_all_progress">Tudo o progresso foi zerado!</string>

    <!-- level choice -->
    <string name="a1">A1 - A2</string>
    <string name="b1">B1 - B2</string>

    <!-- level choice -->
    <string name="mode_choice">Escolhe um modo</string>
    <string name="topics">APRENDER POR TEMAS</string>
    <string name="general">APRENDER TUDO</string>

    <!-- topics choice -->

    <string name="topic_choice">Escolhe um tema</string>

    <string name="topic1b">1</string>
    <string name="title1b">Geografia de Portugal</string>
    <string name="progress1b">10.44%</string>

    <string name="topic2b">2</string>
    <string name="title2b">História de Portugal</string>
    <string name="progress2b">3.32%</string>

    <string name="topic3b">3</string>
    <string name="title3b">Descobrimentos</string>
    <string name="progress3b">5.78%</string>

    <string name="topic4b">4</string>
    <string name="title4b">Viagens de avião e de comboio</string>
    <string name="progress4b">5.99%</string>

    <string name="topic5b">5</string>
    <string name="title5b">Imáginario Portugûes</string>
    <string name="progress5b">5.76%</string>

    <string name="topic6b">6</string>
    <string name="title6b">Automóvel. Acidente de viação</string>
    <string name="progress6b">5.90%</string>

    <string name="topic7b">7</string>
    <string name="title7b">Emigração</string>
    <string name="progress7b">5.00%</string>

    <string name="topic8b">8</string>
    <string name="title8b">Internet e meios de comunicação</string>
    <string name="progress8b">5.00%</string>

    <string name="topic9b">9</string>
    <string name="title9b">Problemas da juventude</string>
    <string name="progress9b">100.50%</string>

    <string name="topic10b">10</string>
    <string name="title10b">Economia</string>
    <string name="progress10b">85.78%</string>

    <string name="topic11b">11</string>
    <string name="title11b">Artes plásticas e pintura</string>
    <string name="progress11b">85.78%</string>

    <string name="topic12b">12</string>
    <string name="title12b">Música e espetáculos musicais</string>
    <string name="progress12b">85.78%</string>

    <string name="title1a">Introdução</string>
    <string name="title2a">Estudando</string>
    <string name="title3a">No cinema</string>
    <string name="title4a">No escritório</string>
    <string name="title5a">Os dias de semana</string>
    <string name="title6a">Estações de ano, meses, calendário</string>
    <string name="title7a">O meu dia útil</string>
    <string name="title8a">O meu retrato. A minha familia</string>
    <string name="title9a">Os meus estudos</string>
    <string name="title10a">Minha casa</string>
    <string name="title11a">A minha autobiografia</string>
    <string name="title12a">Comida portuguesa</string>
    <string name="title13a">Fazendo compras</string>
    <string name="title14a">As minhas férias</string>
    <string name="title15a">A cidade de Lisboa</string>
    <string name="title16a">No teatro e cinema</string>
    <string name="title17a">Médicos e doentes</string>

    <string name="topic1a">1</string>
    <string name="topic2a">2</string>
    <string name="topic3a">3</string>
    <string name="topic4a">4</string>
    <string name="topic5a">5</string>
    <string name="topic6a">6</string>
    <string name="topic7a">7</string>
    <string name="topic8a">8</string>
    <string name="topic9a">9</string>
    <string name="topic10a">10</string>
    <string name="topic11a">11</string>
    <string name="topic12a">12</string>
    <string name="topic13a">13</string>
    <string name="topic14a">14</string>
    <string name="topic15a">15</string>
    <string name="topic16a">16</string>
    <string name="topic17a">17</string>

    <string name="progress1a">3.32%</string>
    <string name="progress2a">3.32%</string>
    <string name="progress3a">3.32%</string>
    <string name="progress4a">3.32%</string>
    <string name="progress5a">3.32%</string>
    <string name="progress6a">3.32%</string>
    <string name="progress7a">3.32%</string>
    <string name="progress8a">3.32%</string>
    <string name="progress9a">3.32%</string>
    <string name="progress10a">3.32%</string>
    <string name="progress11a">3.32%</string>
    <string name="progress12a">3.32%</string>
    <string name="progress13a">3.32%</string>
    <string name="progress14a">3.32%</string>
    <string name="progress15a">3.32%</string>
    <string name="progress16a">3.32%</string>
    <string name="progress17a">3.32%</string>



</resources>
