<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/green"
        android:elevation="4dp"
        android:theme="@style/AzulejoAppbar"
        app:popupTheme="@style/MyToolbar" />

    <Button
        android:id="@+id/wrongBtn"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="36dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/repeat"
        android:background="@color/dot_dark_screen1"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/corBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/corBtn"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="20dp"
        android:text="@string/correct"
        android:background="@color/green"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/wrongBtn" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/touch_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="56dp" />

        <TextView
            android:id="@+id/trans2View"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/translation"
            android:textColor="@color/heading"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/ansView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressView" />

        <TextView
            android:id="@+id/ansView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/answer"
            android:textColor="@color/main_text"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trans2View" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="87dp"
            android:layout_height="27dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline7" />

        <TextView
            android:id="@+id/progressView"
            android:layout_width="82dp"
            android:layout_height="26dp"
            android:layout_marginEnd="128dp"
            android:layout_marginTop="24dp"
            android:text="@string/progresso"
            android:textColor="@color/metro"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline7" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>