<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen1">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/party" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="293dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/congrats_title"
        android:textAlignment="center"
        android:textColor="@color/heading"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/yayView"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="37dp" />

    <TextView
        android:id="@+id/yayView"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/learned_all_topic"
        android:textAlignment="center"
        android:textColor="@color/main_text"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteX="46dp" />

    <Button
        android:id="@+id/TopicYayBtn"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/green"
        android:text="@string/new_topic"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

</android.support.constraint.ConstraintLayout>