<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/touch_area"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen2"
    tools:context="com.example.estepanova.vocablurybooster.LanguageChoice"
    tools:layout_editor_absoluteY="25dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/topmenu"
        android:elevation="4dp"
        android:theme="@style/AzulejoAppbar"
        app:popupTheme="@style/MyToolbar" />

    <TextView
        android:id="@+id/newWordView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:gravity="center"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:text="@string/word"
        android:textAlignment="center"
        android:textColor="@color/heading"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/newTransView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressView" />

    <TextView
        android:id="@+id/newTransView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:gravity="center"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:text="@string/translation"
        android:textAlignment="center"
        android:textColor="@color/dot_dark_screen1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newWordView" />

    <Button
        android:id="@+id/gotBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/heading"
        android:text="@string/entendi"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.86" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="87dp"
        android:layout_height="27dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:max="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <TextView
        android:id="@+id/progressView"
        android:layout_width="86dp"
        android:layout_height="26dp"
        android:layout_marginEnd="108dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/progresso"
        android:textAlignment="center"
        android:textColor="@color/metro"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

</android.support.constraint.ConstraintLayout>
