<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tile_bg">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:elevation="4dp"
        android:theme="@style/AzulejoAppbar"
        app:popupTheme="@style/MyToolbar" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="20sp"
            android:gravity="right|center"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="10dp">

            <TextView
                android:id="@+id/progressView"
                android:layout_width="60dp"
                android:layout_height="26dp"
                android:fontFamily="@font/robotolight"
                android:gravity="center_vertical"
                android:paddingRight="2sp"
                android:text="@string/progresso"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/progress"
                app:layout_constraintEnd_toStartOf="@+id/progressBar" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="87dp"
                android:layout_height="26dp"
                android:max="100"
                android:paddingRight="5sp"
                android:paddingTop="2sp"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/touch_area"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

        <TextView
            android:id="@+id/trans2View"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:fontFamily="@font/robotoregular"
            android:gravity="center"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:text="@string/translation"
            android:textColor="@color/heading"
            android:textSize="@dimen/text_regular"
            app:layout_constraintBottom_toTopOf="@+id/ansView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/touch_area" />

        <TextView
            android:id="@+id/ansView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:fontFamily="@font/robotoregular"
            android:gravity="center"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:text="@string/answer"
            android:textColor="@color/calcada"
            android:textSize="@dimen/text_regular"
            app:layout_constraintBottom_toTopOf="@+id/corBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trans2View" />

        <Button
            android:id="@+id/wrongBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@color/dot_light_screen1"
            android:fontFamily="@font/amaticbold"
            android:text="@string/repeat"
            android:textColor="@color/white"
            android:textSize="@dimen/button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/corBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/corBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@color/heading"
            android:fontFamily="@font/amaticbold"
            android:text="@string/correct"
            android:textColor="@color/white"
            android:textSize="@dimen/button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/wrongBtn" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>